2010-07-29  Dan Nicolaescu  <dann@ics.uci.edu>

	* mem-limits.h: Remove duplicated includes.
	(NULL): Remove definition, unused.
	(POINTER): Remove definition.
	(start_of_data): Use char* in prototype, as the function
	definition does.

	Remove extern declarations from .c files, and them to .h files.
	* keyboard.h (Qhelp_echo, waiting_for_input)
	(input_available_clear_time, ignore_mouse_drag_p)
	(Vdouble_click_time, real_this_command, Vthis_original_command):
	* keymap.h (Qremap, Qmenu_item, Voverriding_local_map)
	(Voverriding_local_map_menu_flag):
	* lisp.h (Qinteractive_form, use_file_dialog)
	(Qcursor_in_echo_area, QCascent, QCmargin, QCrelief, Qcount)
	(Qextension_data, QCconversion, QCcolor_symbols, QCheuristic_mask)
	(QCindex, QCmatrix, QCcolor_adjustment, QCmask)
	(Qrisky_local_variable, map_char_table_for_charset, Vprint_level)
	(Qfunction, debug_on_next_call, Qfield)
	(Vinhibit_field_text_motion, Vuser_login_name, lisp_time_argument)
	(Qpriority, Qwindow, Qevaporate, Qbefore_string, Qafter_string)
	(Qfile_directory_p, Qinsert_file_contents)
	(Qcompletion_ignore_case, Qcompletion_ignore_case)
	(Vcompletion_regexp_list, Vhistory_length, completion_ignore_case)
	(history_delete_duplicates, minibuffer_auto_raise, Qonly)
	(Qfile_name_handler_alist, Qfront_sticky, Qrear_nonsticky)
	(Qminibuffer_prompt)
	(Vtemporary_file_directory,char_ins_del_vector, Qface):
	* xterm.h (gray_bitmap_width, gray_bitmap_height)
	(gray_bitmap_bits, xic_create_fontsetname):
	* coding.h (Vtranslation_table_for_input): Add extern declarations.

	* xsmfns.c (Vuser_login_name):
	* xrdb.c (Vdouble_click_time):
	* xfaces.c (xic_create_fontsetname):
	* w32select.c (waiting_for_input):
	* print.c (minibuffer_auto_raise):
	* msdos.c (Qhelp_echo):
	* macros.c (real_this_command):
	* keymap.c (Voverriding_local_map):
	* xterm.c (poll_for_input_1, gray_bitmap_width)
	(gray_bitmap_height, gray_bitmap_bits;
	* xmenu.c ( Voverriding_local_map)